# dist-network

./: .gitignore  README.md  cabal.project  flake.nix  fourmolu.yaml
nix/: project.nix  shell.nix
src/distrib-utils/: distrib-utils.cabal
src/distrib-utils/src/: DistribUtils.hs
src/ping-pong/: ping-pong.cabal
src/ping-pong-exe/: ping-pong-exe.cabal
src/ping-pong-exe/app/: Main.hs
src/ping-pong-local/: ping-pong-local.cabal
src/ping-pong-local/src/: Master.hs  Message.hs  PingServer.hs
src/ping-pong-network/: ping-pong-network.cabal
src/ping-pong-network/src/: Master.hs
src/ping-pong-network/src/Network/: Master.hs
src/ping-pong-remote/: ping-pong-remote.cabal
src/ping-pong/app/: Main.hs
src/ping-pong/src/: DistribUtils.hs
src/ping-pong/src/Local/: Master.hs
src/ping-pong/src/Remote/: Master.hs
