cabal-version: 3.0
name:          distrib-utils
version:       0.1.0.0

-- synopsis:
-- description:

-- author:
-- maintainer:
-- copyright:
build-type:    Simple

-- extra-source-files:

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language: Haskell2010
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists

library
  import:           base, project-config
  exposed-modules:  DistribUtils

  -- other-modules:
  -- other-extensions:
  build-depends:
    , distributed-process
    , distributed-process-simplelocalnet
    , distributed-static
    , network
    , template-haskell

  hs-source-dirs:   src
  default-language: Haskell2010
