cabal-version: 3.0
name:          ping-pong-exe
version:       0.1.0.0

-- synopsis:
-- description:

-- author:
-- maintainer:
-- copyright:
build-type:    Simple

-- extra-source-files:

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language: Haskell2010

executable ping-pong-exe
  import:           base, project-config
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , ping-pong-local
    , ping-pong-network

  hs-source-dirs:   app
  default-language: Haskell2010
