cabal-version: 3.0
name:          ping-pong-local
version:       0.1.0.0

-- synopsis:
-- description:
author:        kayvan
maintainer:    kayvan@q2io.com

-- copyright:
build-type:    Simple

-- extra-source-files:

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists

library
  import:           base, project-config
  exposed-modules:
    Master
    Message
    PingServer

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , async
    , binary
    , containers
    , distrib-utils
    , distributed-process
    , lens
    , mtl
    , stm
    , text
    , time

  hs-source-dirs:   src
  default-language: Haskell2010
