cabal-version: 3.0
name:          ping-pong
version:       0.1.0.0

-- synopsis:
-- description:

-- author:
-- maintainer:
-- copyright:
build-type:    Simple

-- extra-source-files:

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    Strict
    TupleSections
    TypeApplications
    TypeFamilies

library
  import:          base, project-config
  exposed-modules:
    DistribUtils
    Local.Master
    Message
    PingServer
    Remote.Master

  build-depends:
    , aeson
    , async
    , binary
    , containers
    , distributed-process
    , distributed-process-simplelocalnet
    , lens
    , mtl
    , stm
    , text
    , time

  hs-source-dirs:  src

executable ping-pong
  import:         base, project-config
  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:  ping-pong
  hs-source-dirs: app
